--- a/login.html
+++ b/login.html
@@ -18,9 +18,16 @@
             </span>
         </a>
     </section>
-    <!-- 아이디/비밀번호/버튼 -->
-    <section></section>
+    <div class="login-bars">
+        <input class="login-bar" type="text" onkeypress="if(event.keyCode==13) {onLogin(); return false;}">
+        <br>
+        <input class="login-bar" type="text" onkeypress="if(event.keyCode==13) {onLogin(); return false;}">
+        <br>
+        <button class="login-btn">로그인</button>
+    </div>
+
+    <section>
     <!--  찾기/회원가입 -->
-    <section></section>
+    </section>
 </body>
 </html>
