logo search UI 수정

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <nav class="logo-search" onmouseover="disSearch()" onmouseout="onLogo()">
-        <div id="logo" class="logo">Nearby shop</div>
+        <!-- <div id="logo" class="logo">Nearby shop</div> -->
         <div id="search" class="search">
             <div class="sub-logo">Nearby shop</div>
             <input class="search-bar" type="text" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
