ui 변경사항 수정

--- a/search.html
+++ b/search.html
@@ -5,25 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/.js"></script>
     <title>search</title>
 </head>
 <body>
     <header class="top-header">
-        <div class="login">
+        <span class="login">
             <a href="login.html">
                 <span class="login-text">login</span>
             </a>
-        </div>
+        </span>
+        <span class="login-menu">
+
+        </span>
     </header>
-    <nav class="logo-search">
-        <div class="logo">Nearby shop</div>
-        <div class="search">
-            <span class="sub-logo">주변가게</span>
-            <input type="text">
+
+    <nav class="logo-search" onmouseover="disSearch()" onmouseout="onLogo()">
+        <!-- <div id="logo" class="logo">Nearby shop</div> -->
+        <div id="search" class="search">
+            <div class="sub-logo">Nearby shop</div>
+            <input class="search-bar" type="text" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
         </div>
     </nav>
-    <main class="search">
-        
+
+    <main class="introduction">
+        <section class="introduction-section">
+            <div>Test 설명1</div>
+        </section>
+        <section class="introduction-section">
+            <div>Test 설명2</div>
+        </section>
+        <section class="introduction-section">
+            <div>Test 설명3</div>
+        </section>
     </main>
 </body>
 </html>
