내용표시 수정

--- a/search.html
+++ b/search.html
@@ -23,21 +23,24 @@
     <nav class="logo-search" onmouseover="disSearch()" onmouseout="onLogo()">
         <!-- <div id="logo" class="logo">Nearby shop</div> -->
         <div id="search" class="search">
-            <div class="sub-logo">Nearby shop</div>
+            <a class="sub-logo href-color" href="C:\Users\qqaa2\Documents\GitHub\nearbyShop\index.html">Nearby shop</a>
             <input class="search-bar" type="text" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
         </div>
     </nav>
 
-    <main class="introduction">
-        <section class="introduction-section">
-            <div>Test 설명1</div>
-        </section>
-        <section class="introduction-section">
-            <div>Test 설명2</div>
-        </section>
-        <section class="introduction-section">
-            <div>Test 설명3</div>
-        </section>
+    <main class="introductions">
+        <div class="introduction">
+            <div>가게정보1</div>
+        </div>
+        <div class="introduction">
+            <div>가게정보2</div>
+        </div>
+        <div class="introduction">
+            <div>가게정보3</div>
+        </div>
+        <div class="introduction">
+            <div>가게정보4</div>
+        </div>
     </main>
 </body>
 </html>
