--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="top-header">
         <span class="login">
             <a href="login.html">
-                <span class="login-text">login</span>
+                <span class="login-text href-color">login</span>
             </a>
         </span>
         <span class="login-menu">
@@ -28,16 +28,16 @@
         </div>
     </nav>
 
-    <main class="introduction">
-        <section class="introduction-section">
+    <main class="introductions">
+        <div class="introduction">
             <div>Test 설명1</div>
-        </section>
-        <section class="introduction-section">
+        </div>
+        <div class="introduction">
             <div>Test 설명2</div>
-        </section>
-        <section class="introduction-section">
+        </div>
+        <div class="introduction">
             <div>Test 설명3</div>
-        </section>
+        </div>
     </main>
 </body>
 </html>
