--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <!-- 로고 -->
     <section>
         <a href="index.html">
-            <span class="login-logo">
+            <span class="login-logo href-color">
                 Nearby shop
             </span>
         </a>
