절대경로 -> 상대경로

--- a/search.html
+++ b/search.html
@@ -23,7 +23,7 @@
     <nav class="logo-search" onmouseover="disSearch()" onmouseout="onLogo()">
         <!-- <div id="logo" class="logo">Nearby shop</div> -->
         <div id="search" class="search">
-            <a class="sub-logo href-color" href="C:\Users\qqaa2\Documents\GitHub\nearbyShop\index.html">Nearby shop</a>
+            <a class="sub-logo href-color" href="index.html">Nearby shop</a>
             <input class="search-bar" type="text" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
         </div>
     </nav>
