--- a/login.html
+++ b/login.html
@@ -11,13 +11,11 @@
     <!-- 임시 -->
     <header></header>
     <!-- 로고 -->
-    <section>
-        <a href="index.html">
-            <span class="login-logo href-color">
+    <div class="login-logo">
+        <a  class="base-color href-color" href="index.html">
                 Nearby shop
-            </span>
         </a>
-    </section>
+    </div>
     <div class="login-bars">
         <input class="login-bar" type="text" placeholder="Id" onkeypress="if(event.keyCode==13) {onLogin(); return false;}">
         <br>
@@ -26,8 +24,11 @@
         <button class="login-btn">로그인</button>
     </div>
 
-    <section>
+    <section class="login-under">
     <!--  찾기/회원가입 -->
+        <a class="base-color href-color" href="">아이디 찾기</a>
+        <a class="base-color href-color" href="">비밀번호 찾기</a>
+        <a class="base-color href-color" href="">회원가입</a>
     </section>
 </body>
 </html>
