--- a/search.html
+++ b/search.html
@@ -35,7 +35,7 @@
             <span class="store-name">가게명</span>
             <!-- 가게의 주소 -->
             <span class="store-address">주소</span>
-            <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 -->
+            <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 1.함수 2.링크 -->
             <span class="store-map">지도 <i class="fas fa-search-location fa"></i> </span> 
         </div>
         <hr>
@@ -43,7 +43,7 @@
             <span class="store-name">가게명</span>
             <!-- 가게의 주소 -->
             <span class="store-address">주소</span>
-            <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 -->
+            <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 1.함수 2.링크 -->
             <span class="store-map">지도 <i class="fas fa-search-location"></i> </span> 
         </div>
         <hr>
