--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <div class="login-bars">
         <input class="login-bar" type="text" placeholder="Id" onkeypress="if(event.keyCode==13) {onLogin(); return false;}">
         <br>
-        <input class="login-bar" type="text" placeholder="Password" onkeypress="if(event.keyCode==13) {onLogin(); return false;}">
+        <input class="login-bar" type="password" placeholder="Password" onkeypress="if(event.keyCode==13) {onLogin(); return false;}">
         <br>
         <button class="login-btn">로그인</button>
     </div>
