search 자세히 수정

--- a/search.html
+++ b/search.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header class="top-header">
-        <span class="login">
-            <a href="login.html">
-                <span class="login-text">login</span>
+        <div class="side" style="border-top-left-radius: 180%;">
+            <a href="login.html" class="login-text href-color">
+                <span class="login-text">Login</span>
             </a>
-        </span>
+        </div>
         <span class="login-menu">
 
         </span>
@@ -28,6 +28,8 @@
             <div class="search-bar-icon" onclick="onSearch()"> <i class="fas fa-search fa-2x"></i> </div>
         </div>
     </nav>
+        <div class="side"> </div>
+        <div class="side" style="border-bottom-right-radius: 190%;"> </div>
 
     <main class="main-items">
         <hr>
@@ -36,7 +38,7 @@
             <!-- 가게의 주소 -->
             <span class="store-address">주소</span>
             <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 1.함수 2.링크 -->
-            <span class="store-map">지도 <i class="fas fa-search-location fa"></i> </span> 
+            <span class="store-map"><i class="fas fa-search-location fa fa-2x"></i></span> 
         </div>
         <hr>
         <div class="main-item">
@@ -44,7 +46,7 @@
             <!-- 가게의 주소 -->
             <span class="store-address">주소</span>
             <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 1.함수 2.링크 -->
-            <span class="store-map">지도 <i class="fas fa-search-location"></i> </span> 
+            <span class="store-map"><i class="fas fa-search-location fa-2x"></i></span> 
         </div>
         <hr>
     </main>
