--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header class="top-header">
-        <div class="side" style="border-top-left-radius: 180%;">
-            <a href="login.html" class="login-text href-color">
+        <div class="side-top" style="border-top-left-radius: 45%;">
+            <a href="login.html" class="href-color">
                 <span class="login-text">Login</span>
             </a>
         </div>
@@ -24,31 +24,29 @@
         <!-- <div id="logo" class="logo">Nearby shop</div> -->
         <div id="search" class="search">
             <div class="sub-logo">Nearby shop</div>
-            <input class="search-bar" type="text" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
+            <input class="search-bar" type="text" maxlength="16" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
             <div class="search-bar-icon" onclick="onSearch()"> <i class="fas fa-search fa-2x"></i> </div>
         </div>
     </div>
-    <div class="sides" style="background-color: rgb(175, 175, 175)">
-        <div class="side"> </div>
-        <div class="side" style="border-bottom-right-radius: 190%;"> </div>
-        <div class="side" style="height: 5px; background-color: rgb(175, 175, 175)"></div>
-    </div>
+
+    <div class="side-bottom"> </div>
+
 
     <main class="main-items introductions">
-        <div class="main-item introduction">
+        <!-- <div class="main-item introduction">
             <div class="introduction-left">찾는 물건을 검색 - 물건이 있는 가게정보</div>
         </div>
         <div class="main-item introduction">
             <div class="introduction-right">구매하려는 물건의 가장 가까운 가게정보</div>
-        </div>
-        <div class="main-item introduction">
+        </div> -->
+        <!-- <div class="main-item introduction">
             <div class="introduction-left"></div>
-        </div>
-        <div class="main-item introduction">
+        </div> -->
+        <!-- <div class="main-item introduction">
             <div class="introduction-right">
                 <i class="icon-sns fab fa-twitter"></i><i class="icon-sns fab fa-facebook-f"></i><i class="icon-sns fab fa-instagram"></i>
             </div>
-        </div>
+        </div> -->
     </main>
 </body>
 </html>
