--- a/index.html
+++ b/index.html
@@ -4,49 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <title>Nearby shop</title>
 </head>
 <body>
-    <header class="top-header">
-        <div class="side-top" style="border-top-left-radius: 45%;">
-            <a href="login.html" class="href-color">
-                <span class="login-text">Login</span>
-            </a>
+    <div class="background-img"> </div>
+    <div class="translucent-layer"> </div>
+    <div class="contents">
+        <div class="top">
+            <div class="login-btn">login</div>
         </div>
-        <span class="login-menu">
-
-        </span>
-    </header>
-
-    <div class="logo-search">
-        <!-- <div id="logo" class="logo">Nearby shop</div> -->
-        <div id="search" class="search">
-            <div class="sub-logo">Nearby shop</div>
-            <input class="search-bar" type="text" maxlength="16" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
-            <div class="search-bar-icon" onclick="onSearch()"> <i class="fas fa-search fa-2x"></i> </div>
+        <div class="logo">
+            <table class="logo-table">
+                <td></td>
+                <td class="logo-text">Nearby Shop</td>
+                <td></td>
+            </table>
+        </div>
+        <div class="search">
+            <input class="search-bar" type="text" maxlength="15">
+            <!-- <i class="search-icon fas fa-search fa-2x"></i> -->
         </div>
     </div>
-
-    <div class="side-bottom"> </div>
-
-
-    <main class="main-items introductions">
-        <!-- <div class="main-item introduction">
-            <div class="introduction-left">찾는 물건을 검색 - 물건이 있는 가게정보</div>
-        </div>
-        <div class="main-item introduction">
-            <div class="introduction-right">구매하려는 물건의 가장 가까운 가게정보</div>
-        </div> -->
-        <!-- <div class="main-item introduction">
-            <div class="introduction-left"></div>
-        </div> -->
-        <!-- <div class="main-item introduction">
-            <div class="introduction-right">
-                <i class="icon-sns fab fa-twitter"></i><i class="icon-sns fab fa-facebook-f"></i><i class="icon-sns fab fa-instagram"></i>
-            </div>
-        </div> -->
-    </main>
 </body>
 </html>
