--- a/search.html
+++ b/search.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header class="top-header">
-        <div class="side-top" style="border-top-left-radius: 30%;">
-            <a href="login.html" class="login-text href-color">
-                <span class="login-text">Login</span>
+        <div class="side-top">
+            <a href="login.html" class="href-color">
+                <span class="login-text">login</span>
             </a>
         </div>
         <span class="login-menu">
