--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="translucent-layer"> </div>
     <div class="contents">
         <div class="top">
-            <div class="login-btn">login</div>
+            <a class="login-btn" href="login.html">login</a>
         </div>
         <div class="logo">
             <table class="logo-table">
