--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <script src="js/.js"></script>
     <title>Nearby shop</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
             </table>
         </div>
         <div class="search">
-            <input class="search-bar" type="text" maxlength="15">
+            <input class="search-bar" type="text" maxlength="15" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
             <!-- <i class="search-icon fas fa-search fa-2x"></i> -->
         </div>
     </div>
