배경화면 position 변경
- background fixed로 수정
아래로 내려도 배경이 고정됨

- search 페이지 삭제 예정
검색결과를 index 아래에 나오게 수정

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <input class="search-bar" type="text" maxlength="15" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
             <!-- <i class="search-icon fas fa-search fa-2x"></i> -->
         </div>
+        <div class="result">
+            <!-- 검색결과 -->
+        </div>
     </div>
 </body>
 </html>
