--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
             <input class="search-bar" type="text" maxlength="15" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
             <!-- <i class="search-icon fas fa-search fa-2x"></i> -->
         </div>
-        <div class="result">
+        <div class="stores">
             <!-- 검색결과 -->
+            <div class="store"></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </div>
 </body>
