--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <script src="js/.js"></script>
     <title>Nearby shop</title>
@@ -26,13 +26,6 @@
         <div class="search">
             <input class="search-bar" type="text" maxlength="15" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
             <!-- <i class="search-icon fas fa-search fa-2x"></i> -->
-        </div>
-        <div class="stores">
-            <!-- 검색결과 -->
-            <div class="store"></div>
-            <div></div>
-            <div></div>
-            <div></div>
         </div>
     </div>
 </body>
