--- a/search.html
+++ b/search.html
@@ -5,49 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <script src="js/.js"></script>
-    <title>search</title>
+    <title>Nearby shop/search</title>
 </head>
 <body>
-    <header class="top-header">
-        <div class="side-top">
-            <a href="login.html" class="href-color">
-                <span class="login-text">login</span>
-            </a>
+    <div class="background-img"> </div>
+    <div class="translucent-layer"> </div>
+    <div>
+        <!-- top -->
+    </div>
+    <div class="contents">
+        <div class="stores">
+            <div class="store">
+                <div class="store-title store-name">NAME</div>
+                <div class="store-title store-address">ADDRESS</div>
+                <div class="store-title store-map">MAP</div>
+            </div>
+            <div class="store">
+                <div class="store-item store-name-result">멘산 공장</div>
+                <div class="store-item store-address-result">정보과학관(C관)</div>
+                <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+            </div>
+            <div class="store">
+                <div class="store-item store-name-result">소백산맥</div>
+                <div class="store-item store-address-result">21세기괸 지하1층 스포렉스홀</div>
+                <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+            </div>
+            <div class="store">
+                    <div class="store-item store-name-result">가게명1</div>
+                    <div class="store-item store-address-result">가게주소1</div>
+                    <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+                </div>
+            <div class="store">
+                <div class="store-item store-name-result">가게명2</div>
+                <div class="store-item store-address-result">가게주소2</div>
+                <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+            </div>
+            <div class="store">
+                <div class="store-item store-name-result">가게명3</div>
+                <div class="store-item store-address-result">가게주소3</div>
+                <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+            </div>
         </div>
-        <span class="login-menu">
-
-        </span>
-    </header>
-
-    <nav class="logo-search" onmouseover="disSearch()" onmouseout="onLogo()">
-        <!-- <div id="logo" class="logo">Nearby shop</div> -->
-        <div id="search" class="search">
-            <a class="sub-logo base-color href-color" href="index.html">Nearby shop</a>
-            <input class="search-bar" type="text" maxlength="16" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
-            <div class="search-bar-icon" onclick="onSearch()"> <i class="fas fa-search fa-2x"></i> </div>
-        </div>
-    </nav>
-        <div class="side-bottom"> </div>
-
-    <main class="main-items">
-        <hr>
-        <div class="main-item">
-            <span class="store-name">가게명</span>
-            <!-- 가게의 주소 -->
-            <span class="store-address">주소</span>
-            <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 1.함수 2.링크 -->
-            <span class="store-map"><i class="fas fa-search-location fa fa-2x"></i></span> 
-        </div>
-        <hr>
-        <div class="main-item">
-            <span class="store-name">가게명</span>
-            <!-- 가게의 주소 -->
-            <span class="store-address">주소</span>
-            <!-- 지도: 클릭시 네이버 지도에 자동 입력 및 검색 1.함수 2.링크 -->
-            <span class="store-map"><i class="fas fa-search-location fa-2x"></i></span> 
-        </div>
-        <hr>
-    </main>
+    </div>
 </body>
 </html>
