--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <script   src="https://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
     <script src="js/.js"></script>
     <title>Nearby shop</title>
 </head>
@@ -14,7 +15,7 @@
     <div class="translucent-layer"> </div>
     <div class="contents">
         <div class="top">
-            <a class="login-btn" href="login.html">login</a>
+            <a class="top-login-btn" href="login.html">login</a>
         </div>
         <div class="logo">
             <table class="logo-table">
@@ -26,6 +27,40 @@
         <div class="search">
             <input class="search-bar" type="text" maxlength="15" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
             <!-- <i class="search-icon fas fa-search fa-2x"></i> -->
+        </div>
+        <div class="result">
+            <div class="stores">
+                <div class="store">
+                    <div class="store-title store-name">NAME</div>
+                    <div class="store-title store-address">ADDRESS</div>
+                    <div class="store-title store-map">MAP</div>
+                </div>
+                <div class="store">
+                    <div class="store-item store-name-result">멘산 공장</div>
+                    <div class="store-item store-address-result">정보과학관(C관)</div>
+                    <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+                </div>
+                <div class="store">
+                    <div class="store-item store-name-result">소백산맥</div>
+                    <div class="store-item store-address-result">21세기관 지하1층 스포렉스홀</div>
+                    <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+                </div>
+                <div class="store">
+                        <div class="store-item store-name-result">가게명1</div>
+                        <div class="store-item store-address-result">가게주소1</div>
+                        <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+                    </div>
+                <div class="store">
+                    <div class="store-item store-name-result">가게명2</div>
+                    <div class="store-item store-address-result">가게주소2</div>
+                    <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+                </div>
+                <div class="store">
+                    <div class="store-item store-name-result">가게명3</div>
+                    <div class="store-item store-address-result">가게주소3</div>
+                    <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
