--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <div class="translucent-layer"> </div>
     <div class="contents">
         <div class="top">
+            <div class="sub-top">
+                <div class="top-logo">Nearby Shop</div>
+                <input class="top-search-bar" type="text" maxlength="15" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
+            </div>
             <a class="top-login-btn" href="login.html">login</a>
         </div>
         <div class="logo">
@@ -61,6 +65,19 @@
                     <a href="https://map.naver.com/"> <i class="store-item store-map-result fas fa-search fa-2x"></i> </a>
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            <ul class="footer-menu">
+                <li> <a href="temp.html">Contact us</a> </li>
+                <li> <a href="temp.html">Developer</a> </li>
+                <li> <a href="temp.html">Site introduction</a> </li>
+            </ul>
+        </div>
+        <div class="bottom-etc">
+            <ul class="bottom-etc-menu">
+                <li> <a href="temp.html">이용약관</a> </li>
+                <li> <a href="temp.html">개인정보 처리방침</a> </li>
+            </ul>
         </div>
     </div>
 </body>
