--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="top-logo">Nearby Shop</div>
                 <input class="top-search-bar" type="text" maxlength="15" onkeypress="if(event.keyCode==13) {onSearch(); return false;}">
             </div>
+            <div> <button class="etc-btn"> <i class="etc-btn-icon fas fa-bars"></i> </button> </div>
             <a class="top-login-btn" href="login.html">login</a>
         </div>
         <div class="logo">
